# UncontrolledChat

./: .gitignore  CONTEXT.md  README.md
.github/: copilot-instructions.md
.github/agents/: implement-feature.md  python-expert.md  qa.md  unittestwriter.md
.github/workflows/: copilot-setup-steps.yml
backend/: .coverage  pyproject.toml
backend/src/: btc_bot.py  database.py  main.py  mcp_persona_server.py  models.py  news_bot.py  persona_agent.py  room_crypto.py  websocket.py
backend/tests/: conftest.py  test_btc_bot.py  test_database.py  test_main.py  test_mcp_persona_server.py  test_models.py  test_news_bot.py  test_persona_agent.py  test_room_crypto.py  test_websocket.py
docs/adr/: 0001-shared-passphrase-e2e.md  0002-no-room-entity.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/src/: App.css.html  App.tsx.html  index.html
frontend/coverage/src/components/: ChatInput.css.html  ChatInput.tsx.html  MessageList.css.html  MessageList.tsx.html  UserJoin.css.html  UserJoin.tsx.html  index.html
frontend/coverage/src/media/: index.html  media.ts.html
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: ChatBox.css  ChatBox.test.tsx  ChatBox.tsx  ChatInput.css  ChatInput.test.tsx  ChatInput.tsx  MessageList.css  MessageList.test.tsx  MessageList.tsx  UserJoin.css  UserJoin.test.tsx  UserJoin.tsx
frontend/src/crypto/: roomKey.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/media/: media.ts
frontend/src/personas/: personas.test.ts  personas.ts
