[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uncontrolled-chat-backend"
version = "0.1.0"
description = "FastAPI backend for UncontrolledChat"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "cryptography>=42.0.0",
    "github-copilot-sdk>=1.0.6",
    "mcp>=1.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.1",
    "ruff==0.1.8",
    "mypy==1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
uncontrolledchat-mcp-persona = "src.mcp_persona_server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
